early logo thing

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <script src="advanced_stuff.js"></script>
 </head>
 <body>
-    <a id=""></a>
+    <a id="start"></a>
     <a id="about"></a>
     <a id="links"></a>
     <a id="music"></a>
     <a id="edt"></a>
 
-    <section id="" class="logo">
-        <a href="#about"><img src="assets/transparent_big.png"></a>
-     </section>
+<section id="start" style="background-color: black;">
+    <a href="#about"><img src="assets/transparent_big.png" class="logo"></a>
+</section>
 
 <div style="letter-spacing: 4px; 
     width: calc(100% + 25px); 
