improved scaling, cleaner css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=2">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>midii's website (WIP)</title>
     <link rel="icon" href="assets/transparent_big.png">
     <link rel="stylesheet" href="style.css">
@@ -15,13 +15,12 @@
     <a id="music"></a>
     <a id="edt"></a>
 
-<section id="start" style="background-color: black;">
-    <a href="#about"><img src="assets/transparent_big.png" class="logo"></a>
-</section>
+    <section id="start" style="background-color: black;">
+        <a href="#about"><img src="assets/transparent_big.png" class="logo"></a>
+    </section>    
 
-<div style="letter-spacing: 4px; 
-    width: calc(100% + 25px); 
-        font-size: 32px; 
+<div style="letter-spacing: 4px;
+        font-size: 34px; 
         text-align: center;">
     <p>midii</p>
 </div>
@@ -33,37 +32,34 @@
             <li><a href="#music">Music</a></li>
             <li><a href="#edt">EDTstudio</a></li>
         </ul>
-    </div>
-
-    
+    </div>  
 
     <section id="about">
         <div class="content">
             <h2>about me-</h2>
+            <div style="margin-left: 10px;">
             <p>
                 hello! welcome to my site<br>
-                my username is midii / midiinya, my real name is Natalie.<br>
-                my pronouns are she/her.
+                my username is midii / midiinya, my real name is Natalie<br>
+                my pronouns are she/her
             </p>
             <p>
-                im Norwegian (living in Norway), half Thai, trans female, 16, bisexual, polyamorous, taken.<br>
-                i have autism.
-            </p>
-            <p>
-                i like playing games, doing silly stuff with my friends, and making youtube videos or streaming on twitch.<br>
-                im also a pngtuber :3
-            </p>
-            <p>
-                i make music (usually bitcrushed synthwave (bitwave? synthcrush? bitwavecrushsynthwave??) and i edit videos (i probably wont edit for anyone else cuz im too busy with my own stuff).
+                im Norwegian (living in Norway), half Thai, trans female, 16, bisexual, polyamorous, taken<br>
+                i have autism
+                <br>i like playing games, doing silly stuff with my friends and making youtube videos and/or<br>
+                streaming on twitch
+                <br>im also a pngtuber :3
+                <br>i make music (usually bitcrushed synthwave (bitwave? synthcrush? bitwavecrushsynthwave??)
+                <br>and i edit videos (i probably wont edit for anyone else cuz im too busy with my own stuff)
             </p>
             <p>
                 i love synthwave, my favorite artists/bands are:<br>
-                Forêt de Vin, Gunship, The Midnight, Carpenter Brut, The Strike.
+                Forêt de Vin, Gunship, The Midnight, Carpenter Brut, The Strike
             </p>
             <p>
-                my email is midiinya@gmail.com if you wish to contact me.
+                my email is midiinya@gmail.com if you wish to contact me
             </p>
-            <p>Mae is the best Fortnite skin.</p>
+            <p>Mae is the best Fortnite skin</p>
         </div>
     </section>
 
