--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
     <section id="about">
         <div class="content">
             <h2>about me-</h2>
-            <div style="margin-left: 10px;">
             <p>
                 hello! welcome to my site<br>
                 my username is midii / midiinya, my real name is Natalie<br>
@@ -60,7 +59,6 @@
                 my email is midiinya@gmail.com if you wish to contact me
             </p>
             <p>Mae is the best Fortnite skin</p>
-        </div>
     </section>
 
     <section id="links">
@@ -73,10 +71,11 @@
 
     <section id="edt">
         <div class="content">
-            <h1>Work In Progress!!!</h1>
-            <p>Hello everyone! This is me, Fazzoc!</p>
-            <p>Quick reminder that this website is Work In Progress and a lot of content and page names are included for testing purposes.</p>
-            <p>Thank you for listening! :D ...or reading, for that matter.</p>
+            <h2>EDTstudio-</h2>
+            <img src="assets/image06.png" style="width: 250px;">
+            <p>EDTstudio (Epic Dump Trucks studio) is a studio i own along with <a href="https://linktr.ee/Fazzoc">Fazzoc</a> and <a href="https://www.youtube.com/@DuskDragonNight75">DuskDN75</a></p>
+            <p>more info in the carrd above!</p>
+            <p>this section will be replaced when we make a website for EDTstudio</p>
         </div>
     </section>
 </body>
