scaling improvements Part 1

--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
         <a href="#about"><img src="assets/transparent_big.png" class="logo"></a>
     </section>    
 
-<div style="letter-spacing: 4px;
-        font-size: 34px; 
-        text-align: center;">
-    <p>midii</p>
-</div>
+    <p class="midii">midii</p>
 
     <div class="navbar">
         <ul>
