scaling changes part 1.5 & cleanup

--- a/index.html
+++ b/index.html
@@ -21,17 +21,15 @@
 
     <p class="midii">midii</p>
 
-    <div class="navbar">
-        <ul>
+        <ul class="navbar">
             <li><a href="#about">About Me</a></li>
             <li><a href="#links">Links</a></li>
             <li><a href="#music">Music</a></li>
             <li><a href="#edt">EDTstudio</a></li>
-        </ul>
-    </div>  
+        </ul> 
 
     <section id="about">
-        <div class="content">
+        <div style="padding: 0 13vw;">
             <h2>about me-</h2>
             <p>
                 hello! welcome to my site<br>
@@ -55,6 +53,7 @@
                 my email is midiinya@gmail.com if you wish to contact me
             </p>
             <p>Mae is the best Fortnite skin</p>
+            </div>
     </section>
 
     <section id="links">
@@ -66,7 +65,7 @@
      </section>
 
     <section id="edt">
-        <div class="content">
+        <div style="padding: 0 13vw;">
             <h2>EDTstudio-</h2>
             <img src="assets/image06.png" style="width: 250px;">
             <p>EDTstudio (Epic Dump Trucks studio) is a studio i own along with <a href="https://linktr.ee/Fazzoc">Fazzoc</a> and <a href="https://www.youtube.com/@DuskDragonNight75">DuskDN75</a></p>
