added WIP back button, cleaner HTML code, JS stuff

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>midii's website (WIP)</title>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+    <title>midii's website</title>
     <link rel="icon" href="assets/transparent_big.png">
     <link rel="stylesheet" href="style.css">
     <script src="advanced_stuff.js"></script>
 </head>
 <body>
-    <a id="start"></a>
-    <a id="about"></a>
-    <a id="links"></a>
-    <a id="music"></a>
-    <a id="edt"></a>
+    
+    <a id="start">
+    <a id="about">
+    <a id="links">
+    <a id="music">
+    <a id="edt">
+    </a>
 
     <section id="start" style="background-color: black;">
         <a href="#about"><img src="assets/transparent_big.png" class="logo"></a>
@@ -22,37 +23,45 @@
     <p class="midii">midii</p>
 
         <ul class="navbar">
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#links">Links</a></li>
-            <li><a href="#music">Music</a></li>
-            <li><a href="#edt">EDTstudio</a></li>
+            <li>
+            <a href="#about">About Me</a>
+            <a href="#links">Links</a>
+            <a href="#music">Music</a>
+            <a href="#edt">EDTstudio</a>
+            </li>
         </ul> 
+       
+        <ul class="button1">
+            <a href="#start">◀ back</a> 
+        </ul>
 
     <section id="about">
         <div style="padding: 0 13vw;">
             <h2>about me-</h2>
+
             <p>
                 hello! welcome to my site<br>
                 my username is midii / midiinya, my real name is Natalie<br>
                 my pronouns are she/her
             </p>
-            <p>
-                im Norwegian (living in Norway), half Thai, trans female, 16, bisexual, polyamorous, taken<br>
-                i have autism
-                <br>i like playing games, doing silly stuff with my friends and making youtube videos and/or<br>
-                streaming on twitch
+
+            <p>im Norwegian (living in Norway), half Thai, trans female, 16, bisexual, polyamorous, taken
+                <br>i have autism
+                <br>i like playing games, doing silly stuff with my friends and making youtube videos and/or
+                <br>streaming on twitch
                 <br>im also a pngtuber :3
                 <br>i make music (usually bitcrushed synthwave (bitwave? synthcrush? bitwavecrushsynthwave??)
                 <br>and i edit videos (i probably wont edit for anyone else cuz im too busy with my own stuff)
             </p>
-            <p>
-                i love synthwave, my favorite artists/bands are:<br>
-                Forêt de Vin, Gunship, The Midnight, Carpenter Brut, The Strike
+
+                <p>i love synthwave, my favorite artists/bands are:
+                <br>Forêt de Vin, Gunship, The Midnight, Carpenter Brut, The Strike
             </p>
-            <p>
-                my email is midiinya@gmail.com if you wish to contact me
+                <p>my email is midiinya@gmail.com if you wish to contact me
             </p>
-            <p>Mae is the best Fortnite skin</p>
+
+            <p>Mae is the best Fortnite skin
+            </p>
             </div>
     </section>
 
