TESTING - early what page, song player stuff

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a id="links">
     <a id="music">
     <a id="edt">
+    <a id="what"></a>
     </a>
 
     <section id="start" style="background-color: black;">
@@ -33,6 +34,14 @@
        
         <ul class="button1">
             <a href="#start">◀ back</a> 
+        </ul>
+
+        <audio id="audioPlayer" controls loop>
+            <source src="assets/insight.mp3" type="audio/mpeg">
+        </audio>
+        
+          <ul class="button1">
+            <a href="#what">▲ tf is this?</a> 
         </ul>
 
     <section id="about">
@@ -82,5 +91,9 @@
             <p>this section will be replaced when we make a website for EDTstudio</p>
         </div>
     </section>
+
+    <section id="what">
+        test
+     </section>
 </body>
 </html>
