fix player position, scaling, cleanup

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <a href="#start">◀ back</a> 
         </ul>
 
-        <audio id="audioPlayer" controls loop>
-            <source src="assets/insight.mp3" type="audio/mpeg">
+        <audio id="audioPlayer" controls loop style="margin: 0 auto; display: table;">
+            <source src="assets/insight.mp3" type>
         </audio>
         
           <ul class="button1">
@@ -93,7 +93,13 @@
     </section>
 
     <section id="what">
-        test
+        <div style="padding: 0 13vw;">
+            <p>the reason that's there is because i made this song specifically for my site (because i felt like it)
+                <br>it's called insight btw                
+                <p>previously it wasn't possible to get the carrd to autoplay this song
+                <br>but with fazzoc's help on recreating this carrd and making it a website made it possible!
+            </br></p>
+            </div>
      </section>
 </body>
 </html>
