2/3rd of the site is done, optimised assets, code!

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-    <title>midii's website</title>
-    <link rel="icon" href="assets/transparent_big.png">
+    <link rel="icon" href="assets/midii.svg">
     <link rel="stylesheet" href="style.css">
     <script src="advanced_stuff.js"></script>
+    <title>midii's website</title>
 </head>
 <body>
     
@@ -14,12 +14,24 @@
     <a id="links">
     <a id="music">
     <a id="edt">
-    <a id="what"></a>
+    <a id="what">
+    <a id="bear5">
+    <a id="merch">
     </a>
 
     <section id="start" style="background-color: black;">
-        <a href="#about"><img src="assets/transparent_big.png" class="logo"></a>
+        <a href="#about"><img src="assets/midii.svg" class="logo"></a>
     </section>    
+
+    <section id="bear5" style="background-color: black;">
+        <div>
+            <h1>BEAR5 ATTACK RAHHHHH!!!!!!!!!!</h1>
+            
+            <ul class="button1">
+                <a href="#about">◀ back</a> 
+            </ul>
+        </div>
+     </section>
 
     <p class="midii">midii</p>
 
@@ -45,13 +57,12 @@
         </ul>
 
     <section id="about">
-        <div style="padding: 0 13vw;">
+        <div>
             <h2>about me-</h2>
 
-            <p>
-                hello! welcome to my site<br>
-                my username is midii / midiinya, my real name is Natalie<br>
-                my pronouns are she/her
+            <p>hello! welcome to my site
+            <br>my username is midii / midiinya, my real name is Natalie
+            <br>my pronouns are she/her
             </p>
 
             <p>im Norwegian (living in Norway), half Thai, trans female, 16, bisexual, polyamorous, taken
@@ -66,40 +77,93 @@
                 <p>i love synthwave, my favorite artists/bands are:
                 <br>Forêt de Vin, Gunship, The Midnight, Carpenter Brut, The Strike
             </p>
-                <p>my email is midiinya@gmail.com if you wish to contact me
-            </p>
 
-            <p>Mae is the best Fortnite skin
-            </p>
+            <p>my email is midiinya@gmail.com if you wish to contact me</p>
+
+            <p>Mae is the best Fortnite skin</p>
             </div>
     </section>
 
     <section id="links">
-        test
+        <div>
+            <h2>links to my stuff-</h2>
+            <div class="button2">
+            <a href="https://www.youtube.com/@midii." class="button1">midii</a>
+            <a href="https://www.youtube.com/@moremid" class="button1">More Mid</a>
+            <a href="https://www.youtube.com/@midiiLIVE" class="button1">midiiLIVE</a>
+            <a href="https://pronouns.page/@midii" class="button1">Pronouns.page</a>
+            <a href="https://www.twitch.tv/midiinya" class="button1">Twitch</a>
+            <a href="https://twitter.com/midiinya" class="button1">Twitter</a>
+            <a href="https://www.reddit.com/user/midiinya" class="button1">Reddit</a>
+            <a href="https://open.spotify.com/artist/6ENevJ3PjtaUSoXayQGUvi" class="button1">Spotify</a>
+            <a href="https://soundcloud.com/midiinya" class="button1">Soundcloud</a>
+            <a href="https://gamebanana.com/members/1912000" class="button1">GameBanana</a>
+            <a href="https://midii.newgrounds.com" class="button1">Newgrounds</a>
+            <a href="https://steamcommunity.com/id/midiinya" class="button1">Steam</a>
+            <a href="https://www.roblox.com/users/116168381/profile" class="button1">Roblox</a>
+        </div>
+            <p>my discord server & bandcamp site are in the <a href="#edt">EDTstudio section</a>
+            </p>
+        </div>
      </section>
 
-     <section id="music">
-        test
-     </section>
+    <section id="music">
+        <div>
+            <h2>my music-</h2>
+            <h3>albums & EPs:</h3>
+            <h1 style="text-align: center;">none yet</h1>
+        <table>
+            <tr>
+                <h3 colspan="2">singles</h3>
+            <tr style="font-size: 1.5rem;">
+                <td>stickwaves
+                    <br><a href="https://open.spotify.com/album/4O1ziiQ8Ws7zDc0Pp4XKD2"><img src="assets/image04.webp" class="covers"></a>
+                <td>aporia
+                    <br><a href="https://open.spotify.com/album/1gKgm4zsXIZEOLqkYs9siy"><img src="assets/image02.webp" class="covers"></a>
+            <tr style="font-size: 1.5rem;">
+                <td>chem
+                    <br><a href="https://open.spotify.com/album/3hrI1O6gP9lnVDV3aOml9C"><img src="assets/image03.webp" class="covers"></a>
+                <td>california corndog 강남스타일 게이밍
+                    <br><a href="https://soundcloud.com/midiinya/californiacorndog"><img src="assets/image05.webp" class="covers"></a>
+            <tr style="font-size: 1.5rem;">
+                <td>crystalCoda 
+                    <br><a href="https://open.spotify.com/album/4qTDY2uH73gi5Y5Vx5Lfrl"><img src="assets/image02.webp" class="covers"></a>
+
+                <td>insight
+                    <br><a href="https://open.spotify.com/album/2KmRtzxgvZHCWAxZZ6t5rj"><img src="assets/image02.webp" class="covers"></a>
+            </td>
+            </tr>
+        </table> 
+        </div>
+    </section>
 
     <section id="edt">
-        <div style="padding: 0 13vw;">
+        <div>
             <h2>EDTstudio-</h2>
-            <img src="assets/image06.png" style="width: 250px;">
-            <p>EDTstudio (Epic Dump Trucks studio) is a studio i own along with <a href="https://linktr.ee/Fazzoc">Fazzoc</a> and <a href="https://www.youtube.com/@DuskDragonNight75">DuskDN75</a></p>
-            <p>more info in the carrd above!</p>
-            <p>this section will be replaced when we make a website for EDTstudio</p>
+            <img src="assets/image06.webp" style="width: 250px;">
+            <p>EDTstudio (Epic Dump Trucks studio) is a studio i own along with <a href="https://linktr.ee/Fazzoc">Fazzoc</a> and <a href="https://www.youtube.com/@DuskDragonNight75">DuskDN75</a>
+            <p>more info in the carrd above!
+            <p>this section will be replaced when we make a website for EDTstudio
+            </p>
         </div>
     </section>
 
     <section id="what">
-        <div style="padding: 0 13vw;">
+        <div>
             <p>the reason that's there is because i made this song specifically for my site (because i felt like it)
                 <br>it's called insight btw                
                 <p>previously it wasn't possible to get the carrd to autoplay this song
                 <br>but with fazzoc's help on recreating this carrd and making it a website made it possible!
-            </br></p>
+            </p>
             </div>
      </section>
+
+     <section id="merch">
+        <div>
+            <p>surely you jestin</p>
+            <img src="assets/image25.webp" style=" width:54vh; border-radius: 0.5rem; display: block; margin: auto;">
+            </div>
+     </section>
+
 </body>
 </html>
