--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <img src="assets/image06.webp" style="width: 250px;">
             <p>EDTstudio (Epic Dump Trucks studio) is a studio i own along with <a href="https://linktr.ee/Fazzoc">Fazzoc</a> and <a href="https://www.youtube.com/@DuskDragonNight75">DuskDN75</a>
         <div class="button2">
-            <a href="https://www.youtube.com/@midii." class="button1">EDTstudio Carrd</a>
+            <a href="https://epicdumptrucks.carrd.co/" class="button1">EDTstudio Carrd</a>
         </div>
             <p>more info in the carrd above!
             <p>this section will be replaced when we make a website for EDTstudio
