--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="description" content="Hello! welcome to my site! This site includes content about me, the things i do and more" charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Hello! welcome to my site! This site includes content about me, the things i do and more">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="assets/midii.svg">
     <link rel="stylesheet" href="style.css">
     <script src="advanced_stuff.js"></script>
