--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </a>
 
     <section id="start" style="background-color: black;">
-        <a href="#about"><img alt="" src="assets/midii.svg" class="logo"></a>
+        <a href="#about"><img src="assets/midii.svg" class="logo"></a>
     </section>    
 
     <section id="bear5" style="background-color: black;">
