improvements to SEO, remove #what page

--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
     <a id="links">
     <a id="music">
     <a id="edt">
-    <a id="what">
     <a id="bear5">
     <a id="merch">
     </a>
 
     <section id="start" style="background-color: black;">
-        <a href="#about"><img src="assets/midii.svg" class="logo"></a>
+        <a href="#about"><img alt="midii logo" src="assets/midii.svg" class="logo"></a>
     </section>    
 
     <section id="bear5" style="background-color: black;">
@@ -38,7 +37,7 @@
 
         <ul class="navbar">
             <li>
-            <a href="#about">About Me</a>
+            <a href="#about">About</a>
             <a href="#links">Links</a>
             <a href="#music">Music</a>
             <a href="#edt">EDTstudio</a>
@@ -52,10 +51,6 @@
         <audio id="audioPlayer" controls loop style="margin: 0 auto; display: table;">
             <source src="assets/insight.mp3" type>
         </audio>
-        
-          <ul class="button1">
-            <a href="#what">▲ tf is this?</a> 
-        </ul>
 
     <section id="about">
         <div>
@@ -82,6 +77,9 @@
             <p>my email is midiinya@gmail.com if you wish to contact me</p>
 
             <p>Mae is the best Fortnite skin</p>
+
+            <br><h2>about site-</h2>
+            
             </div>
     </section>
 
@@ -118,20 +116,20 @@
                 <h3 colspan="2">singles</h3>
             <tr style="font-size: 1.5rem;">
                 <td>stickwaves
-                    <br><a href="https://open.spotify.com/album/4O1ziiQ8Ws7zDc0Pp4XKD2"><img src="assets/image04.webp" class="covers"></a>
+                    <br><a href="https://open.spotify.com/album/4O1ziiQ8Ws7zDc0Pp4XKD2"><img alt="" src="assets/image04.webp" class="covers"></a>
                 <td>aporia
-                    <br><a href="https://open.spotify.com/album/1gKgm4zsXIZEOLqkYs9siy"><img src="assets/image02.webp" class="covers"></a>
+                    <br><a href="https://open.spotify.com/album/1gKgm4zsXIZEOLqkYs9siy"><img alt="" src="assets/image02.webp" class="covers"></a>
             <tr style="font-size: 1.5rem;">
                 <td>chem
-                    <br><a href="https://open.spotify.com/album/3hrI1O6gP9lnVDV3aOml9C"><img src="assets/image03.webp" class="covers"></a>
+                    <br><a href="https://open.spotify.com/album/3hrI1O6gP9lnVDV3aOml9C"><img alt="" src="assets/image03.webp" class="covers"></a>
                 <td>california corndog 강남스타일 게이밍
-                    <br><a href="https://soundcloud.com/midiinya/californiacorndog"><img src="assets/image05.webp" class="covers"></a>
+                    <br><a href="https://soundcloud.com/midiinya/californiacorndog"><img alt="" src="assets/image05.webp" class="covers"></a>
             <tr style="font-size: 1.5rem;">
                 <td>crystalCoda 
-                    <br><a href="https://open.spotify.com/album/4qTDY2uH73gi5Y5Vx5Lfrl"><img src="assets/image02.webp" class="covers"></a>
+                    <br><a href="https://open.spotify.com/album/4qTDY2uH73gi5Y5Vx5Lfrl"><img alt="" src="assets/image02.webp" class="covers"></a>
 
                 <td>insight
-                    <br><a href="https://open.spotify.com/album/2KmRtzxgvZHCWAxZZ6t5rj"><img src="assets/image02.webp" class="covers"></a>
+                    <br><a href="https://open.spotify.com/album/2KmRtzxgvZHCWAxZZ6t5rj"><img alt="" src="assets/image02.webp" class="covers"></a>
             </td>
             </tr>
         </table> 
@@ -141,7 +139,7 @@
     <section id="edt">
         <div>
             <h2>EDTstudio-</h2>
-            <img alt="EDTstudio logo" src="assets/image06.webp" style="width: 250px;">
+            <img alt="" src="assets/image06.webp" style="width: 250px;">
             <p>EDTstudio (Epic Dump Trucks studio) is a studio i own along with <a href="https://linktr.ee/Fazzoc">Fazzoc</a> and <a href="https://www.youtube.com/@DuskDragonNight75">DuskDN75</a>
         <div class="button2">
             <a href="https://epicdumptrucks.carrd.co/" class="button1">EDTstudio Carrd</a>
@@ -152,20 +150,10 @@
         </div>
     </section>
 
-    <section id="what">
-        <div>
-            <p>the reason that's there is because i made this song specifically for my site (because i felt like it)
-                <br>it's called insight btw                
-                <p>previously it wasn't possible to get the carrd to autoplay this song
-                <br>but with fazzoc's help on recreating this carrd and making it a website made it possible!
-            </p>
-            </div>
-     </section>
-
      <section id="merch">
         <div>
             <p>surely you jestin</p>
-            <img alt="honk honk! :D" src="assets/image25.webp" style=" width:54vh; border-radius: 0.5rem; display: block; margin: auto;">
+            <img alt="honk honk! :)" src="assets/image25.webp" style=" width:54vh; border-radius: 0.5rem; display: block; margin: auto;">
             </div>
      </section>
 
