well, lucky there's a family guy

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 
             <br><h2>about site-</h2>
 
+            <p>hold on im playing fnaf <img alt="" src="assets/image13.webp"></img></p>
+
             </div>
     </section>
 
