--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <tr>
                 <h3 colspan="2">singles</h3>
             <tr style="font-size: 1.5rem;">
-                <td>stickwaves
+                <td>stickwavez
                     <br><a href="https://open.spotify.com/album/4O1ziiQ8Ws7zDc0Pp4XKD2"><img alt="" src="assets/image04.webp" class="covers"></a>
                 <td>aporia
                     <br><a href="https://open.spotify.com/album/1gKgm4zsXIZEOLqkYs9siy"><img alt="" src="assets/image02.webp" class="covers"></a>
