port some new changes from midii's carrd

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 
             <p>im Norwegian (living in Norway), half Thai, trans female, 16, bisexual, polyamorous, taken
                 <br>i have autism
-                <br>i like playing games, doing silly stuff with my friends and making youtube videos and/or
+                <br>i like playing games or just doing silly shit with my friends and making youtube videos and/or
                 <br>streaming on twitch
                 <br>im also a pngtuber :3
-                <br>i make music (usually bitcrushed synthwave (bitwave? synthcrush? bitwavecrushsynthwave??)
+                <br>i make music (usually bitcrushed synthwave)
                 <br>and i edit videos (i probably wont edit for anyone else cuz im too busy with my own stuff)
             </p>
 
@@ -72,7 +72,7 @@
                 <br>Forêt de Vin, Gunship, The Midnight, Carpenter Brut, The Strike
             </p>
 
-            <p>my email is midiinya@gmail.com if you wish to contact me</p>
+            <p>my email is midiinya@gmail.com if you wish to contact me or somethin</p>
 
             <p>Mae is the best Fortnite skin</p>
 
@@ -92,8 +92,8 @@
             <a href="https://www.youtube.com/@midiiLIVE" class="button1">midiiLIVE</a>
             <a href="https://pronouns.page/@midii" class="button1">Pronouns.page</a>
             <a href="https://www.twitch.tv/midiinya" class="button1">Twitch</a>
-            <a href="https://twitter.com/midiinya" class="button1">Twitter</a>
             <a href="https://www.reddit.com/user/midiinya" class="button1">Reddit</a>
+            <a href="https://ko-fi.com/midiinya" class="button1">Ko-fi</a>
             <a href="https://open.spotify.com/artist/6ENevJ3PjtaUSoXayQGUvi" class="button1">Spotify</a>
             <a href="https://soundcloud.com/midiinya" class="button1">Soundcloud</a>
             <a href="https://gamebanana.com/members/1912000" class="button1">GameBanana</a>
