--- a/index.html
+++ b/index.html
@@ -46,10 +46,6 @@
             <a href="#start">◀ back</a> 
         </ul>
 
-        <audio id="audioPlayer" controls loop style="margin: 0 auto; display: table;">
-            <source src="assets/insight.mp3" type>
-        </audio>
-
     <section id="about">
         <div>
             <h2>about me-</h2>
@@ -156,6 +152,13 @@
             <img alt="honk honk! :)" src="assets/image25.webp" style=" width:54vh; border-radius: 0.5rem; display: block; margin: auto;">
             </div>
      </section>
+    
+     <div id="volume-control">
+        <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="1">
+        <button id="mute-button">
+            <img id="volume-icon" src="assets/play.svg" alt="Play/Pause">
+        </button>
+    </div>
 
 </body>
 </html>
