Bear 5 button (working, early)

--- a/index.html
+++ b/index.html
@@ -160,5 +160,9 @@
         </button>
     </div>
 
+    <footer>
+        <a href="#bear5"><img alt="BEAR5!!" src="assets/image17.webp" class="bear5"></a>
+    </footer>
+
 </body>
 </html>
