fix for button 2 sizing

--- a/index.html
+++ b/index.html
@@ -82,20 +82,20 @@
     <section id="links">
         <div>
             <h2>links to my stuff-</h2>
-            <div class="button2">
-            <a href="https://www.youtube.com/@midii." class="button1">midii</a>
-            <a href="https://www.youtube.com/@moremid" class="button1">More Mid</a>
-            <a href="https://www.youtube.com/@midiiLIVE" class="button1">midiiLIVE</a>
-            <a href="https://pronouns.page/@midii" class="button1">Pronouns.page</a>
-            <a href="https://www.twitch.tv/midiinya" class="button1">Twitch</a>
-            <a href="https://www.reddit.com/user/midiinya" class="button1">Reddit</a>
-            <a href="https://ko-fi.com/midiinya" class="button1">Ko-fi</a>
-            <a href="https://open.spotify.com/artist/6ENevJ3PjtaUSoXayQGUvi" class="button1">Spotify</a>
-            <a href="https://soundcloud.com/midiinya" class="button1">Soundcloud</a>
-            <a href="https://gamebanana.com/members/1912000" class="button1">GameBanana</a>
-            <a href="https://midii.newgrounds.com" class="button1">Newgrounds</a>
-            <a href="https://steamcommunity.com/id/midiinya" class="button1">Steam</a>
-            <a href="https://www.roblox.com/users/116168381/profile" class="button1">Roblox</a>
+        <div class="button2">
+            <a href="https://www.youtube.com/@midii.">midii</a>
+            <a href="https://www.youtube.com/@moremid">More Mid</a>
+            <a href="https://www.youtube.com/@midiiLIVE">midiiLIVE</a>
+            <a href="https://pronouns.page/@midii">Pronouns.page</a>
+            <a href="https://www.twitch.tv/midiinya">Twitch</a>
+            <a href="https://www.reddit.com/user/midiinya">Reddit</a>
+            <a href="https://ko-fi.com/midiinya">Ko-fi</a>
+            <a href="https://open.spotify.com/artist/6ENevJ3PjtaUSoXayQGUvi">Spotify</a>
+            <a href="https://soundcloud.com/midiinya">Soundcloud</a>
+            <a href="https://gamebanana.com/members/1912000">GameBanana</a>
+            <a href="https://midii.newgrounds.com">Newgrounds</a>
+            <a href="https://steamcommunity.com/id/midiinya">Steam</a>
+            <a href="https://www.roblox.com/users/116168381/profile">Roblox</a>
         </div>
             <p>my discord server & bandcamp site are in the <a href="#edt">EDTstudio section</a>
             </p>
