added WORK IN PROGRESS TEXT

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
      </section>
 
-    <p class="midii">midii</p>
+    <p class="midii">midii<br>WORK IN PROGRESS</p>
 
         <ul class="navbar">
             <a href="#about">About</a>
